# sql-complexity

./: .secrets.baseline  README.md  pyproject.toml  tasks.py
src/sql_complexity/: __init__.py  __main__.py  cli.py  complexity.py
tests/: test_queries.py
