[project]
name = "sql-complexity"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nahuel Defossé", email = "nahuel.deofsse@ibm.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "rich>=14.2.0",
    "sqlglot>=27.28.1",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
]
[project.scripts]
"sql-complexity" = "sql_complexity.cli:main"




[project.urls]
Documentation = "https://github.com/D3f0/sql-complexity#readme"
Issues = "https://github.com/D3f0/sql-complexity/issues"
Source = "https://github.com/D3f0/sql-complexity"
